xee-xpath/tests/snapshots/arithmetic__binary_add_untyped_atomic_with_whitespace.snap
---
source: xee-xpath/tests/arithmetic.rs
assertion_line: 81
expression: "run(r#\"xs:untypedAtomic(\"  4  \") + 1\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Double(
                    5.0,
                ),
            ),
        },
    ),
)
