xee-xpath/tests/snapshots/arithmetic__unary_minus_string_is_still_a_type_error.snap
---
source: xee-xpath/tests/arithmetic.rs
assertion_line: 69
expression: "run(r#\"-(\"a\")\"#)"
---
Err(
    SpannedError {
        error: XPTY0004,
        span: Some(
            SourceSpan(
                0,
                6,
            ),
        ),
    },
)
