xee-xpath/tests/snapshots/arithmetic__unary_minus_untyped_atomic.snap
---
source: xee-xpath/tests/arithmetic.rs
assertion_line: 54
expression: "run(r#\"-(xs:untypedAtomic(\"3\"))\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Double(
                    -3.0,
                ),
            ),
        },
    ),
)
