xee-xpath/tests/snapshots/arithmetic__unary_minus_untyped_atomic_invalid.snap
---
source: xee-xpath/tests/arithmetic.rs
assertion_line: 64
expression: "run(r#\"-(xs:untypedAtomic(\"abc\"))\"#)"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                26,
            ),
        ),
    },
)
