xee-xpath/tests/snapshots/arithmetic__unary_plus_untyped_atomic.snap
---
source: xee-xpath/tests/arithmetic.rs
assertion_line: 59
expression: "run(r#\"+(xs:untypedAtomic(\"3.5\"))\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Double(
                    3.5,
                ),
            ),
        },
    ),
)
